# watchman

./: .gitignore  CMakeLists.txt  README.md
doc/images/: watchman.ai
include/: watchman.h
lib/: CMakeLists.txt  tesla_internal.h  watchman_class.c  watchman_class_global.c  watchman_class_perthread.c  watchman_debug.c  watchman_dtrace.c  watchman_internal.h  watchman_key.h  watchman_notification.c  watchman_store.c  watchman_update.c  watchman_util.c
test/: CMakeLists.txt  lit.cfg
test/lib/: CMakeLists.txt  TestHarness.h  actions.cpp  lit.local.cfg  lookup.cpp  match.cpp  repeat.cpp  store.c  test_helpers.h  update.cpp
